--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Lock files - use whichever package manager you prefer
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
