--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "group:linters", "group:allNonMajor", ":ignoreUnstable"],
-  "commitMessageAction": "update"
+  "extends": ["config:base", "group:linters", "group:allNonMajor"],
+  "commitMessageAction": "update",
+  "separateMultipleMajor": true
 }
