--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "devDependencies": {
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.1.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.5",
+    "@sitek94/style-guide": "^1.3.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.9"
-  }
+    "vite": "^5.2.10"
+  },
+  "prettier": "@sitek94/style-guide/prettier"
 }
